--- a/package.json
+++ b/package.json
@@ -8,13 +8,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "framer-motion": "^6.3.15",
+    "gsap": "^3.10.4",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react": "^1.3.0",
+    "sass": "^1.53.0",
     "vite": "^2.9.9"
   }
 }
