--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "classnames": "^2.3.1",
     "framer-motion": "^6.3.15",
     "gsap": "^3.10.4",
     "motion": "^10.10.2",
