--- a/package.json
+++ b/package.json
@@ -11,14 +11,15 @@
     "@reduxjs/toolkit": "^1.8.3",
     "classnames": "^2.3.1",
     "framer-motion": "^6.3.15",
-    "sass": "^1.53.0",
     "gsap": "^3.10.4",
+    "locomotive-scroll": "^4.1.4",
     "motion": "^10.10.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-icons": "^4.4.0",
     "react-redux": "^8.0.2",
-    "react-router-dom": "^6.3.0"
+    "react-router-dom": "^6.3.0",
+    "sass": "^1.53.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
